<resources>
    <string name="app_name">Basic Commonplace Studies</string>

    <!-- Main Screen -->
    <string name="main_screen_cta_button_experiments">Button Experiments</string>
    <string name="main_screen_cta_checkbox_experiments">Checkbox Experiments</string>
    <string name="main_screen_cta_radio_button_experiments">Radio Buttons Experiments</string>
    <string name="main_screen_cta_switch_experiments">Switches Experiments</string>
    <string name="main_screen_cta_text_fields_experiments">Text Fields Experiments</string>
    <string name="main_screen_cta_sliders_experiments">Sliders Experiments</string>
    <string name="main_screen_cta_progress_indicators_experiments">Progress Indicators Experiments</string>
    <string name="main_screen_cta_snackbars_experiments">Snackbars Experiments</string>
    <string name="main_screen_cta_dialogs_experiments">Dialogs Experiments</string>
    <string name="main_screen_cta_lists_experiments">Lists Experiments</string>

    <!-- Button Experiments -->
    <string name="button_experiments_material_buttons">Material Buttons</string>
    <string name="button_experiments_theme_styled_material_buttons">Theme Styled Material Buttons</string>
    <string name="button_experiments_android_base_buttons">Android Base Buttons</string>
    <string name="button_experiments_material_button_cta">Material Button</string>
    <string name="button_experiments_styled_material_button_cta">Styled Material Button</string>
    <string name="button_experiments_text">Text</string>
    <string name="button_experiments_outlined">Outlined</string>
    <string name="button_experiments_contained">Contained</string>
    <string name="button_experiments_toggle1">Toggle 1</string>
    <string name="button_experiments_toggle2">Toggle 2</string>
    <string name="button_experiments_toggle3">Toggle 3</string>

    <!-- Checkbox Experiments -->
    <string name="checkbox_experiments_material_checkboxes">Material Checkboxes</string>
    <string name="checkbox_experiments_material_checkboxes_groups">Material Checkboxes Groups</string>
    <string name="checkbox_experiments_check1_selected">Checkbox 1 - Selected</string>
    <string name="checkbox_experiments_check2_unselected">Checkbox 2 - Unselected</string>
    <string name="checkbox_experiments_check3_disabled">Checkbox 3 - Disabled</string>
    <string name="checkbox_experiments_check4_styled">Checkbox 4 - Some Style</string>
    <string name="checkbox_experiments_option_group">Option Group</string>
    <string name="checkbox_experiments_option1">Option 1</string>
    <string name="checkbox_experiments_option2">Option 2</string>
    <string name="checkbox_experiments_option3">Option 3</string>
    <string name="checkbox_experiments_checkbox_with_custom_icon">Checkbox with Custom Icon</string>

    <!-- Radio Button Experiments -->
    <string name="radio_buttons_experiments_material_radio_buttons">Material Radio Buttons</string>
    <string name="radio_buttons_experiments_radio1_selected">Radio 1 - Selected</string>
    <string name="radio_buttons_experiments_radio2_unselected">Radio 2 - Unselected</string>
    <string name="radio_buttons_experiments_radio3_disabled">Radio 3 - Disabled</string>
    <string name="radio_buttons_experiments_radio4_styled">Radio 4 - Some Style</string>

    <!-- Switches Experiments -->
    <string name="switch_experiments_material_switches">Material Switches</string>
    <string name="switch_buttons_experiments_switch1_checked">Switch 1 - Checked</string>
    <string name="switch_buttons_experiments_switch2_unselected">Switch 2 - Unchecked</string>
    <string name="switch_buttons_experiments_switch3_disabled">Switch 3 - Disabled</string>
    <string name="switch_buttons_experiments_switch4_styled">Switch 4 - Some Style</string>

    <!-- Text Field Experiments -->
    <string name="text_field_experiments_material_filled_text_field">Material Filled Text Field</string>
    <string name="text_field_experiments_material_outlined_text_field">Material Outlined Text Field</string>
    <string name="text_field_experiments_material_filled_hint">Filled</string>
    <string name="text_field_experiments_material_filled_helper_text">Helper Text for Filled</string>
    <string name="text_field_experiments_material_dropdown_hint">Pick an Option</string>
    <string name="text_field_experiments_material_outlined_hint">Outlined</string>
    <string name="text_field_experiments_material_outlined_helper_text">Helper Text for Outlined</string>

    <!-- Sliders Experiments -->
    <string name="sliders_experiments_material_continous_slider">Material Slider Continuous</string>
    <string name="sliders_experiments_material_discrete_slider">Material Slider Discrete</string>

    <!-- Progress Indicators Experiments -->
    <string name="progress_indicators_experiments_native">Native Progress Indicator</string>
    <string name="progress_indicators_experiments_native_set_progress_button">Set progress</string>
    <string name="progress_indicators_experiments_material">Material Progress Indicator</string>
    <string name="progress_indicators_experiments_indeterminate">Indeterminate</string>
    <string name="progress_indicators_experiments_determinate">Determinate</string>

    <!-- Snackbars Experiments -->
    <string name="snackbars_experiments_material">Material Snackbars</string>
    <string name="snackbars_experiments_anchor_button">Anchor Button</string>
    <string name="snackbars_experiments_snackbar_message">This is a snackbar!</string>
    <string name="snackbars_experiments_show_snackbar">Show Snackbar</string>
    <string name="snackbars_experiments_enable_anchor">Enable Anchor</string>
    <string name="snackbars_experiments_show_action_button">Show Action Button</string>
    <string name="snackbars_experiments_apply_custom_styling">Apply Custom Styling</string>
    <string name="snackbars_experiments_action_button">Action</string>

    <!-- Dialogs Experiments -->
    <string name="dialog_experiments_material">Material Dialogs</string>
    <string name="dialog_experiments_show_alert_dialog">Show Alert Dialog</string>
    <string name="dialog_experiments_show_simple_dialog">Show Simple Dialog</string>
    <string name="dialog_experiments_show_confirmation_single_choice_dialog">Show Confirmation Dialog - Single Choice</string>
    <string name="dialog_experiments_show_confirmation_multiple_choice_dialog">Show Confirmation Dialog - Multiple Choice</string>
    <string name="dialog_experiments_show_custom_view_dialog">Show Custom View Dialog</string>
    <string name="dialog_experiments_show_full_screen_dialog">Show Full Screen Dialog</string>
    <string name="dialog_experiments_dialog_title">This is a title</string>
    <string name="dialog_experiments_dialog_supporting_text">Supporting Text</string>
    <string name="dialog_experiments_dialog_confirmation_button">Yeah</string>
    <string name="dialog_experiments_dialog_cancelation_button">Nay</string>
    <string name="dialog_experiments_dialog_ack_button">Got that!</string>
    <string name="dialog_experiments_button_tapped">Button Tapped!</string>

    <!-- Lists Experiments -->
    <string name="lists_experiments_open_carousel_experiments_button">Open Carousel Experiments</string>

    <!-- Lists with Carousels Experiments -->

</resources>
