<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonExperimentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_cta_button_experiments" />

    <Button
        android:id="@+id/checkboxExperimentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_cta_checkbox_experiments" />

    <Button
        android:id="@+id/radioButtonsExperimentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_cta_radio_button_experiments" />

    <Button
        android:id="@+id/switchesExperimentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_cta_switch_experiments" />

    <Button
        android:id="@+id/textInputExperimentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_cta_text_fields_experiments" />

    <Button
        android:id="@+id/slidersExperimentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_cta_sliders_experiments" />

    <Button
        android:id="@+id/progressIndicatorsExperimentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_cta_progress_indicators_experiments" />

    <Button
        android:id="@+id/snackbarsExperimentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_cta_snackbars_experiments" />

    <Button
        android:id="@+id/dialogsExperimentsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_cta_dialogs_experiments" />

</LinearLayout>
