<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.switches.SwitchesExperimentsActivity">

    <TextView
        android:id="@+id/materialSectionTitleTextView"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/switch_experiments_material_switches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/checkedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/switch_buttons_experiments_switch1_checked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/materialSectionTitleTextView" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/uncheckedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_buttons_experiments_switch1_checked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkedSwitch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/disabledSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/switch_buttons_experiments_switch3_disabled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/uncheckedSwitch" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/styledSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_buttons_experiments_switch4_styled"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/purple_500"
        app:thumbTint="@color/selector_switch_tint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/disabledSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>
